@@ -1,5 +1,7 @@
 * What is new in gsl-2.6:
 
+** remove -u flag to gsl-histogram
+
 ** add routines for banded Cholesky decomposition (gsl_linalg_cholesky_band_*)
 
 ** documented gsl_linalg_LQ routines and added gsl_linalg_LQ_lssolve()
